--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-search-engine",
   "version": "0.1.0",
-  "private": true,                                                      
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^8.54.0"
   }
 }
