--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "vue-search-engine",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "@innologica/vue-dropdown-menu": "^0.1.4",
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.13"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^8.54.0"
-  }
+    "name": "vue-search-engine",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "eslint . --fix"
+    },
+    "dependencies": {
+        "@innologica/vue-dropdown-menu": "^0.1.4",
+        "core-js": "^3.8.3",
+        "vue": "^3.2.13",
+        "vue-class-component": "^8.0.0-0",
+        "vue-router": "^4.0.13"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.12.0",
+        "@typescript-eslint/parser": "^6.12.0",
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-typescript": "~5.0.0",
+        "@vue/cli-service": "~5.0.0",
+        "eslint": "^8.54.0",
+        "eslint-plugin-vue": "^9.18.1",
+        "typescript": "~4.5.5"
+    }
 }
