Fix styles, chage appearence

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@innologica/vue-dropdown-menu": "^0.1.4",
         "core-js": "^3.8.3",
+        "v-dropdown": "^3.0.0",
         "vue": "^3.2.13",
         "vue-class-component": "^8.0.0-0",
         "vue-router": "^4.0.13"
